# openslide-pure-rs

./: .gitignore  Cargo.toml  Makefile  OPENSLIDE_BUGS.md  README.md  build.rs  prek.toml
.github/workflows/: ci.yaml
docs/: README.md  benchmark-runner.md  codec-policy.md  compressed-extraction.md  fixture-sourcing.md  maturity-report.md  memory-error-policy.md  ome-images-parity-sweep.md  status-policy.md
examples/: bench_real.rs  bench_real_levels.rs  compressed_extraction.rs  jpegtran_crop.rs  probe_index.rs  test_real.rs
fixtures/: bench-baseline.json  expected-parity.toml  level-baseline.json  local-slide-entries.txt  manifest.toml  matrix.toml  reader-status.toml  reference-unreadable-slides.txt  runner-status.toml
protocol/: miramax.txt
scripts/: README.md  bench-realdata-levels.py  bench-realdata.py  check-audit-baselines.py  check-mature-runner-gate.py  check-public-testdata-metadata.py  check-runner-status-update.py  check-stable-runner.py  download-openslide-testdata.py  find-fixture-candidates.py  maturity-audit.sh  maturity-report.py  parity-check.py  parity.sh  run-stable-benchmark.sh  smoke-public-testdata.py  toaudit-benchmark-summary.py  update-runner-status.py
src/: cache.rs  compressed.rs  debug.rs  error.rs  grid.rs  lib.rs  main.rs  pixel.rs  properties.rs  util.rs
src/decode/: bmp.rs  cairo_blit.c  jpeg.rs  jpeg2000.rs  jpeg_crop.c  jpegxr.rs  mod.rs  openjpeg_decode.c  png.rs
src/format/: aperio.rs  argos.rs  dicom.rs  hamamatsu.rs  huron.rs  leica.rs  mod.rs  philips.rs  sakura.rs  synthetic.rs  tiff.rs  tiff_alias.rs  trestle.rs  unsupported.rs  ventana.rs  zeiss.rs
src/format/mirax/: index.rs  mod.rs  slidedat.rs  tile.rs
