[package]
name = "openslide-pure-rs"
version = "0.1.1"
edition = "2021"
description = "Pure Rust library for reading whole slide images"
license = "LGPL-2.1"
homepage = "https://github.com/henriksson-lab/openslide-pure-rs"
include = ["/src/**/*.rs", "/README.md", "/Cargo.toml"]

[dependencies]
thiserror = "2"
configparser = "3"
zune-jpeg = "0.5"
png = "0.17"
byteorder = "1"
flate2 = "1"
lru = "0.12"
tiff = "0.11"
zstd-pure-rs = "0.1.1"

[dev-dependencies]
