[package]
name = "openslide-pure-rs"
version = "0.1.1"
edition = "2021"
description = "Pure Rust library for reading whole slide images (digital pathology), including Mirax (.mrxs)"
license = "LGPL-2.1-only"
homepage = "https://github.com/henriksson-lab/openslide-rs"
repository = "https://github.com/henriksson-lab/openslide-rs"
readme = "README.md"
keywords = ["openslide", "pathology", "microscopy", "wsi", "mirax"]
categories = ["multimedia::images", "science", "parsing"]
include = ["/src/**/*.rs", "/README.md", "/Cargo.toml"]

[dependencies]
thiserror = "2"
configparser = "3"
zune-jpeg = "0.5"
png = "0.17"
byteorder = "1"
flate2 = "1"
lru = "0.12"
tiff = "0.11"
zstd-pure-rs = "0.1"
dicom-toolkit-jpeg2000 = { version = "0.5", default-features = false, features = ["std"] }
